--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 .vscode/
-
+__pycache__/
+*/__pycache__/
+*/*/__pycache__/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
