--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+#Кто заполнял этот докер композ, мощно, но читать сложно минимум enter
 version: '3.9'
 services:
   backend:
@@ -19,7 +20,7 @@ services:
       volumes:
         - postgres-data:/var/lib/postgresql/data
       ports:
-        - "5434:5432"
+        - "5432:5432"
       environment:
         POSTGRES_DB: ${DB_NAME}
         POSTGRES_USER: ${DB_USER}
