--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 #Кто заполнял этот докер композ, мощно, но читать сложно минимум enter
 version: '3.9'
 services:
+
   backend:
     build:
       context:  ./apps
@@ -15,6 +16,8 @@ services:
       - backend
     volumes:
       -  .:/kolos_warehouse
+
+
   postgres-db:
       image: 'postgres:16'
       volumes:
@@ -22,12 +25,15 @@ services:
       ports:
         - "5432:5432"
       environment:
-        POSTGRES_DB: ${DB_NAME}
-        POSTGRES_USER: ${DB_USER}
-        POSTGRES_PASSWORD: ${DB_PASSWORD}
+        POSTGRES_DB: ${POSTGRES_DB}
+        POSTGRES_USER: ${POSTGRES_USER}
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+
+
 networks:
   backend:
     driver: bridge
+
 volumes:
   postgres-data:
 
