--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,8 @@ services:
         - postgres-data:/var/lib/postgresql/data
       ports:
         - "5432:5432"
-      environment:
-        POSTGRES_DB: ${POSTGRES_DB}
-        POSTGRES_USER: ${POSTGRES_USER}
-        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      env_file:
+        - apps/.env.db
 
 
 networks:
