--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,34 @@
-#Кто заполнял этот докер композ, мощно, но читать сложно минимум enter
 version: '3.3'
+
 services:
 
-  backend:
+  back-end:
+    user: "root"
     build:
-      context:  ./apps
-      dockerfile: DockerFile
-    container_name: backend
-    env_file:
-      - apps/.env
-    command: sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver"
-    ports:
-      - "8000:8000"
-    networks:
-      - backend
+      context: ./apps
+      dockerfile: Dockerfile
+    command: >
+      sh -c "python manage.py collectstatic --noinput  && python manage.py makemigrations && python manage.py migrate &&
+             gunicorn core.wsgi:application --bind 0.0.0.0:8000 --access-logfile -"
     volumes:
-      -  .:/kolos_warehouse
+      - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
+    expose:
+      - "8000"
+    env_file:
+      - ./apps/.env/
 
 
-  postgres-db:
-      image: 'postgres:16'
-      volumes:
-        - postgres-data:/var/lib/postgresql/data
-      ports:
-        - "5432:5432"
-      env_file:
-        - apps/.env.db
-
-
-networks:
-  backend:
-    driver: bridge
+  db:
+    image: postgres:15.1-alpine3.17
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgres/data/
+    env_file:
+      - ./apps/.env.db/
 
 volumes:
-  postgres-data:
-
+  postgres_data:
+  static_volume:
+  media_volume:
