--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     volumes:
       - static_volume:/home/app/web/static
       - media_volume:/home/app/web/media
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     env_file:
       - ./apps/.env/
 
