--- a/apps/Dockerfile
+++ b/apps/Dockerfile
@@ -1,66 +1,14 @@
-###########
-# BUILDER #
-###########
+FROM python:3.9
 
-# pull official base image
-FROM python:3.10.9-alpine3.17 as builder
+ENV PYTHONWRITEBYTECODE 1
+ENV PYTHONBUFFERED 1
 
-# set work directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+COPY ./requirements/req.txt /app/requirements/
 
-# install psycopg2 dependencies
-RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
-
-# lint
 RUN pip install --upgrade pip
 
-COPY . .
+RUN pip install -r requirements/req.txt
 
-
-# install dependencies
-COPY requirements/prod .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r prod
-
-
-#########
-# FINAL #
-#########
-
-# pull official base image
-FROM python:3.10.9-alpine3.17
-
-# create directory for the app user
-RUN mkdir -p /home/app
-
-# create the app user
-RUN addgroup -S app && adduser -S app -G app
-
-# create the appropriate directories
-ENV HOME=/home/app
-ENV APP_HOME=/home/app/web
-RUN mkdir $APP_HOME
-RUN mkdir $APP_HOME/staticfiles
-RUN mkdir $APP_HOME/mediafiles
-WORKDIR $APP_HOME
-
-# install dependencies
-RUN apk update && apk add libpq libc-dev
-RUN apk add --update alpine-sdk
-COPY --from=builder /usr/src/app/wheels /wheels
-COPY --from=builder /usr/src/app/prod .
-RUN pip install --no-cache /wheels/*
-
-
-# copy project
-COPY . $APP_HOME
-
-# chown all the files to the app user
-RUN chown -R app:app $APP_HOME
-
-# change to the app user
-USER app
+COPY . /app
